<resources>
    <string name="app_name">Calculator</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="click_for_login_screen">click for login screen</string>
    <string name="login">LOGIN</string>
    <string name="cancel">CANCEL</string>
    <string name="username">USERNAME</string>
    <string name="checkbox">CheckBox</string>
    <string name="password">PASSWORD</string>
</resources>
